Update to gradle 2.14.1
- update to gradle 2.14.1 = which includes performance improvements, new features, and an important security fix
- update to android gradle plugin 2.1.3
- update to new protobuf libraries
- update to new support libs

--- a/cyra_launcher.conf
+++ b/cyra_launcher.conf
@@ -4,15 +4,13 @@
 SDK_PATH=
 
 # Build tools
-GRADLE="2.9"
-GRADLE_ANDROID_PLUGIN="1.3.1"
+GRADLE="2.14.1"
+GRADLE_ANDROID_PLUGIN="2.1.3"
 JAVA="1.7"
-BUILD_TOOLS="23.0.2"
+BUILD_TOOLS="23.0.3"
 SUPPORT_LIBRARY="23.0.1"
 
-# Gradle repositories
-# - jcenter; or
-# - maven.
+# Gradle repository
 GRADLE_REPO=jcenter
 
 # Application info
